terraform/network.tf
resource "aws_vpc" "test-env" {
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support = true
}
# resource "aws_eip" "ip-test-env" {
#   instance = "${aws_instance.test-ec2-instance.id}"
#   vpc      = true
# }

resource "aws_eip_association" "eip_assoc" {
  instance_id   = "${aws_instance.test-ec2-instance.id}"
  allocation_id = "eipalloc-0ee26d49192d445e9"
}
